Do Not Edit!  This is a generated file.
	You should edit the NEWS file instead.

LibRan/Urand
